[metadata]
name = ambianic-fall-detection
version = 1.0.1
author = Bhavika Kanani
author_email = bhavika@softmaxai.com
description = Standalone Python ML library for people fall detection based on Tensorflow and PoseNet 2.0.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ambianic.ai
license = Apache Software License 2.0
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Topic :: Software Development :: Embedded Systems
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.7

