[metadata]
name = falldetect
version = 1.0.9
author = Bhavika Kanani, Ivelin Ivanov
author_email = bhavika@softmaxai.com, ivelin.ivanov@ambianic.ai
description = Standalone Python ML library for people fall detection based on Tensorflow and PoseNet 2.0.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ambianic.ai
license = Apache Software License 2.0
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Topic :: Software Development :: Embedded Systems
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.7

